--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://your-backend-domain.vercel.app
-VITE_SOCKET_URL=https://your-backend-domain.vercel.app
+   VITE_API_URL = https://visionarycrew-be.vercel.app
+   VITE_SOCKET_URL = https://visionarycrew-be.vercel.app
+   NODE_ENV = production
