--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+package-lock.json
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +24,25 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Build
+/build
+/dist
+
+# Testing
+/coverage
+
+# Misc
+*.pem
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
