--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,22 @@
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" }
+    },
+    {
+      "src": "/(.*).(js|css|svg|jpg|jpeg|png|gif|ico|json)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" }
+    },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate",
+        "X-Content-Type-Options": "nosniff"
+      }
     }
   ]
 }
