--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-   VITE_API_URL = https://visionarycrew-be.vercel.app
-   VITE_SOCKET_URL = https://visionarycrew-be.vercel.app
+   VITE_API_URL = https://visionarycrew-be-rpo7.vercel.app
+   VITE_SOCKET_URL = https://visionarycrew-be-rpo7.vercel.app
    NODE_ENV = production
